test/regress/cov3-annotate-dup-valexpr.test
; Test error for duplicate valuation expression
; Covers annotate.cc (duplicate valuation expression)

2024/01/01 Test
    Assets:Brokerage    10 AAPL ((9)) ((10))
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Brokerage    10 AAPL ((9)) ((10))
                      ^^^^^^^^^^^^^^^^^^^^
Error: Commodity specifies more than one valuation expression
end test
